[gd_scene load_steps=15 format=3 uid="uid://c51x4byo5ln4d"]

[ext_resource type="FontFile" uid="uid://b7qr37dya6wcn" path="res://Alpha/fonts/gadugi-normal.ttf" id="1_xcwfd"]
[ext_resource type="Texture2D" uid="uid://dcun3v6lbcjc" path="res://Alpha/2D assets/Menus/Main_Menu/Sprites/Button Highlight.png" id="2_bvere"]
[ext_resource type="Script" uid="uid://ddaxrshh6n2ui" path="res://Alpha/Scripts/Menus/menu_button.gd" id="2_ttd52"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bvere"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ttd52"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hh4c7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vbram"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3lwa5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uykle"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ren2j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8huqi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t2j14"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8g2pc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xrcou"]

[node name="MenuButton" type="Button"]
custom_minimum_size = Vector2(325.28, 65.635)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/align_to_largest_stylebox = 1
theme_override_fonts/font = ExtResource("1_xcwfd")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_bvere")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ttd52")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_hh4c7")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_vbram")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_3lwa5")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_uykle")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ren2j")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_8huqi")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t2j14")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_8g2pc")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xrcou")
alignment = 2
script = ExtResource("2_ttd52")

[node name="ButtonHighlight" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_bvere")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 40

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_xcwfd")
theme_override_font_sizes/font_size = 30
text = "TEXT"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
